k8s-demo-rest-mee/additional/svc-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-mee
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: rest-mee
