k8s-demo-rest-mee/additional/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rest-mee
spec:
  rules:
  - host: rest-mee.localtest.me
    http:
      paths:
      - path: /
        backend:
          serviceName: rest-mee
          servicePort: 8080
